# rpi_rt_test

./: .gitignore  CMakeLists.txt  CROSS_COMPILE.md  LICENSE  README.md  toolchain-rpi4-aarch64.cmake
scripts/: deploy.sh  setup_realtime_rpi.sh
src/: rt_tuto.cpp  rt_utils.h
